Fixed scrollbar colors

--- a/src/frontend/src/style/classes.css
+++ b/src/frontend/src/style/classes.css
@@ -15,14 +15,6 @@ pre {
   font-family: inherit;
 }
 
-.ag-paging-page-size {
-  display: none;
-}
-
-.ag-row {
-  cursor: pointer;
-}
-
 .react-flow__pane {
   cursor: default;
 }
@@ -64,16 +56,16 @@ select:-webkit-autofill:focus {
 }
 
 .ace_scrollbar::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: hsl(var(--muted));
 }
 
 .ace_scrollbar::-webkit-scrollbar-thumb {
-  background-color: #ccc;
+  background-color: hsl(var(--border));
   border-radius: 999px;
 }
 
 .ace_scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #bbb;
+  background-color: hsl(var(--ring));
   border-radius: 999px;
 }
 
